--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-fastapi==0.74.*
-requests==2.27.*
-sentencepiece==0.1.*
-torch==1.13.*
-transformers==4.*
-uvicorn[standard]==0.17.*
-protobuf==3.20.*
-pydantic==1.10.7
-accelerate==0.19.*
-bitsandbytes==0.38.*
-tensorflow_text==2.12.*
-tensorflow_hub==0.13.*
-tensorflow==2.12.*
+fastapi
+requests
+sentencepiece
+transformers
+uvicorn[standard]
+protobuf
+pydantic
+accelerate
